# PythonLearningClubWebsite

./: README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  schemas.py
backend/app/: crud.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: login.py  users.py
backend/app/core/: db.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/apis/: request.ts  users.api.ts
frontend/src/pages/home-page/: HomePage.tsx  PageButton.tsx  SocialMediaButtons.tsx
frontend/src/pages/login-page/: LoginPage.tsx
frontend/src/pages/register-page/: RegisterPage.tsx
